# gitlab-analyzer

./: .gitignore  .prettierignore  README.md  package.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  paths.rs
src-tauri/src/commands/: branches_list.rs  commits_branch_delete.rs  commits_branch_delete_impact.rs  commits_collect.rs  commits_collect_bulk.rs  commits_collect_bulk_test.rs  gitlab_connection_get.rs  gitlab_connection_set.rs  mod.rs  projects_list.rs  projects_sync.rs  stats_monthly_cross_view.rs  stats_monthly_project_view.rs  user_filter_get.rs  user_filter_set.rs
src-tauri/src/domain/: branch.rs  commit.rs  gitlab_connection.rs  mod.rs  project.rs
src-tauri/src/gitlab/: branches.rs  client.rs  commits.rs  mod.rs  types.rs
src-tauri/src/stats/: mod.rs  monthly_cross_view.rs  monthly_project_view.rs  types.rs
src-tauri/src/storage/: bulk_collection_repository.rs  bulk_collection_repository_test.rs  commit_repository.rs  connection_repository.rs  json_store.rs  mod.rs  model.rs  project_repository.rs  repository.rs  schema.rs  user_filter_repository.rs
src-tauri/src/storage/sqlite/: commit_repository.rs  connection_repository.rs  db.rs  health.rs  json_migration.rs  migrations.rs  mod.rs  project_repository.rs  user_filter_repository.rs
src-tauri/src/storage/sqlite/migrations/: 001_init.sql  006_bulk_collection.sql
src-tauri/src/storage/sqlite/tests/: commit_repository_test.rs  connection_repository_test.rs  migrations_test.rs  (+3 more)
(+102 files in other folders)
