[package]
name = "gitlab-analyzer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitlab_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP クライアント
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# 非同期ランタイム（Tauri が tokio を使用）
tokio = { version = "1", features = ["fs", "sync"] }

# 日時処理
chrono = { version = "0.4", features = ["serde"] }

# エラーハンドリング
thiserror = "2"
anyhow = "1"

# ディレクトリパス
dirs = "6"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL エンコーディング
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

